deleted media queries for very large devices

--- a/main.css
+++ b/main.css
@@ -337,76 +337,88 @@ color: white;
     margin: 18px 9px -28px 9px;
 }
 
-@media only screen and (max-device-width : 1920px)  {
-.about{
-    width: 62%;
-}
-.skills{
-    width: 59%;
-}
-.skills img{
-    margin: 36px 1303px 0px 7px;
-}
-.projects {
-    padding: 41px 198px;
-}
-}
-@media only screen and (max-device-width : 1680px)  {
-.skills{
-    width: 72%;
-}
-.skills img {
-    margin: 36px 1090px 0px 7px;
-}
-}
-@media only screen and (max-device-width : 1680px)  {
+/*@media only screen and (max-device-width : 1920px)  {*/
+/*.about{*/
+/*    width: 62%;*/
+/*}*/
+/*.skills{*/
+/*    width: 59%;*/
+/*}*/
+/*.skills img{*/
+/*    margin: 36px 1303px 0px 7px;*/
+/*}*/
+/*.projects {*/
+/*    padding: 41px 198px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width : 1680px)  {*/
+/*.skills{*/
+/*    width: 72%;*/
+/*}*/
+/*.skills img {*/
+/*    margin: 36px 1090px 0px 7px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width : 1680px)  {*/
 
-.skills img {
-    margin: 36px 1023px 0px 7px;
-}
-}
-@media only screen and (max-device-width : 1440px)  {
-.skills{
-    width: 80%;
-}
-.skills img {
-    margin: 36px 878px 0px 7px;
-}
-}
+/*.skills img {*/
+/*    margin: 36px 1023px 0px 7px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width : 1440px)  {*/
+/*.skills{*/
+/*    width: 80%;*/
+/*}*/
+/*.skills img {*/
+/*    margin: 36px 878px 0px 7px;*/
+/*}*/
+/*}*/
 
 
-@media only screen and (max-device-width : 1367px)  {
-.skills{
-    width: 83%;
-}
-.skills img {
-    margin: 36px 737px 0px 7px;
-}
-}
-@media only screen and (max-device-width: 1280px) {
-.skills {
-    width: 88%;
-}
-.skills img {
-    margin: 36px 753px 0px 7px;
-}
-}
-@media only screen and (max-device-width: 1024px){
-    .about{
-        height: 700px;
-    }
-.skills {
-    width: 112%;
-} 
-.skills img {
-    margin: 36px 746px 0px 7px;
-}
-}
-@media only screen and (max-device-width: 960px){
-    .about img {
-    margin: 0px 17px;
-}
-}
+/*@media only screen and (max-device-width : 1367px)  {*/
+/*.skills{*/
+/*    width: 83%;*/
+/*}*/
+/*.skills img {*/
+/*    margin: 36px 737px 0px 7px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width: 1280px) {*/
+/*.skills {*/
+/*    width: 88%;*/
+/*}*/
+/*.skills img {*/
+/*    margin: 36px 753px 0px 7px;*/
+/*}*/
+/*}*/
+
+/*@media only screen and (max-device-width: 1089px){*/
+/*    .about{*/
+/*        height: 700px;*/
+/*    }*/
+/*.skills {*/
+/*    width: 112%;*/
+/*} */
+/*.skills img {*/
+/*    margin: 36px 746px 0px 7px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width: 1024px){*/
+/*    .about{*/
+/*        height: 700px;*/
+/*    }*/
+/*.skills {*/
+/*    width: 112%;*/
+/*} */
+/*.skills img {*/
+/*    margin: 36px 746px 0px 7px;*/
+/*}*/
+/*}*/
+/*@media only screen and (max-device-width: 960px){*/
+/*    .about img {*/
+/*    margin: 0px 17px;*/
+/*}*/
+/*}*/
 
 @media only screen and (max-device-width: 768px) {
 .about{
