--- a/main.css
+++ b/main.css
@@ -174,15 +174,14 @@ color: white;
 }
 
 .about p {
-    line-height: 28px;
     margin-bottom: 35px;
 }
 
-.about img {
-    width: 414px;
-    height: 365px;
-    border-radius: 11%;
-    margin: 0px 70px;
+.about .my-pic img {
+     max-width: 100%;
+    height: 500px;
+    width: 375px;
+    border-radius: 500px;
 }
 
 .about .my-pic {
@@ -205,7 +204,19 @@ color: white;
     text-align: center;
     
 }
-
+.works{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.works:before{
+    display: table;
+    content: " ";
+}
+.works:after {
+    clear: both;
+}
 .projects h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -244,13 +255,18 @@ color: white;
     /*table-layout: fixed;*/
     width: 91%;
     text-align: center;
-    padding-right: 17px;
-    padding-left: 23px;
-    margin-right: auto;
-    margin-left: auto;
+    /*padding-right: 17px;*/
+    /*padding-left: 23px;*/
+    /*margin-right: auto;*/
+    /*margin-left: auto;*/
     /*max-width: 80%;*/
-    
+        margin-right: -15px;
+    margin-left: -15px;
+    /*box-sizing: border-box;*/
+        display: block;
 }
+    
+
 .skills h2{
     text-transform: uppercase;
     color: royalblue;
@@ -260,8 +276,8 @@ color: white;
 
 .skills .inner-content 
 {
-    margin: 0;
-    padding: 20px 20px;
+    /*margin: 0;*/
+    /*padding: 20px 20px;*/
     list-style: none;
     background-repeat: no-repeat;
     background-position: left center;
@@ -273,42 +289,75 @@ color: white;
 }
 
 .skills img {
-   width: 84px;
-   height: 84px;
-   margin: auto;
+   /*width: 84px;*/
+   /*height: 84px;*/
+   /*margin: auto;*/
    text-align: center;
    /*margin-top: 20px;*/
-   margin: 36px 747px 0px 7px;
+   /*margin: 10px 343px 0px 4px;*/
    text-shadow: #00a4ba 1px 1px, #00a4ba 2px 2px;
-   border-radius: 5px;
-       
+   /*border-radius: 5px;*/
+       padding-right: 300px;
 }
 
 .skills .mid-skills {
-      /*width: 33.33333333%;*/
-   /* border: double; */
-   /*display: table-cell;*/
-   /*border: 1px solid #ccc;*/
+    /*position: relative;*/
+    /*min-height: 1px;*/
+    /*padding-right: 15px;*/
+    /*padding-left: 15px;*/
+        /*padding: 80px 0;*/
+        
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+
 }
 
 .skills .mid-skills-two {
-    /*width: 33.33333333%;*/
-    /*border: 1px solid #ccc;*/
-    /*display: table-cell;*/
-    /*float: left;*/
+     position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+            /*padding: 80px 0;*/
+
 }
 
 .skills .mid-content {
     /*margin: 17px 36px 58px 0px;*/
-    margin: auto;
-    text-align: center;
+    /*margin: auto;*/
+    /*text-align: center;*/
+        /*margin: 0px 0 70px 0;*/
+        padding: 80px 0;
+
 }
 
 .contact {
-    padding: 60px;
-    text-align: center;
-    color: black;
-    background-color: #eee;
+    /*padding: 60px;*/
+    /*text-align: center;*/
+    /*color: black;*/
+    /*background-color: #eee;*/
+    /*display: table;*/
+    /*content: " ";*/
+    padding-top: 50px;
+    padding-bottom: 60px;
+    padding-left: 0;
+    padding-right: 0;
+    
+}
+.contact .inner-contact:before {
+    display: table;
+    content: " ";
+}
+.contact .inner-contact{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    float: left;
+    position: relative;
+    z-index: 99;
+    color: #fff;
 }
 
 .contact h2 {
@@ -340,4 +389,57 @@ color: white;
     width: 40px;
     height: 40px;
     margin: 18px 9px -28px 9px;
+}
+
+@media only screen and (min-width: 1200px){
+.works, .inner-content {
+    width: 1170px;
+}
+.mid-skills, .mid-skills-two{
+    width: 100%;
+    float: left;
+}
+    
+}
+
+@media only screen and (min-width: 992px){
+.works{
+    width: 970px;
+}
+.mid-skills, .mid-skills-two{
+    width: 50%;
+    float: left;
+}
+.inner-content{
+    margin-left: 25%;
+        width: 50%;
+            float: left;
+}
+    
+}
+
+@media only screen and (min-width: 768px){
+.works {
+    width: 750px;
+}
+.inner-content{
+    
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+  .about {
+
+    padding: 70px 0;
+
+  }
+
+  .about .about-me {
+
+    padding: 0;
+
+  }
+
 }
