--- a/main.css
+++ b/main.css
@@ -164,8 +164,8 @@ color: white;
     margin-left: auto;
 }
 .about {
-    padding: 110px 0;
-
+    /*padding: 110px 0;*/
+    padding: 20px 30px 0 30px;
 
 }
 .about h2{
@@ -179,8 +179,8 @@ color: white;
 
 .about .my-pic img {
      max-width: 100%;
-    height: 500px;
-    width: 375px;
+    height: 424px;
+    width: 360px;
     border-radius: 500px;
 }
 
@@ -192,9 +192,9 @@ color: white;
     /*float: right;*/
     
 .about .about-me {
-    /*width: 45%;*/
-    /*float: left;*/
-    padding: 20px 30px 0px 30px;
+    width: 62%;
+    float: left;
+    /*padding: 20px 30px 0px 30px;*/
     
 }
 
@@ -213,14 +213,16 @@ color: white;
 .works:before{
     display: table;
     content: " ";
+    box-sizing: border-box;
 }
 .works:after {
     clear: both;
+    box-sizing: border-box;
 }
 .projects h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-        text-transform: uppercase;
+    text-transform: uppercase;
     color: royalblue;
 }
 
@@ -253,7 +255,7 @@ color: white;
     list-style: none;
     /*display: table;*/
     /*table-layout: fixed;*/
-    width: 91%;
+    /*width: 100%;*/
     text-align: center;
     /*padding-right: 17px;*/
     /*padding-left: 23px;*/
@@ -276,28 +278,24 @@ color: white;
 
 .skills .inner-content 
 {
-    /*margin: 0;*/
-    /*padding: 20px 20px;*/
-    list-style: none;
+list-style: none;
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 40px;
-    text-align: left;
-    padding: 0px 4px 9px 239px;
-    margin: -65px 8px 7px 0px;
-    
+    text-align: center;
+     
 }
 
 .skills img {
-   /*width: 84px;*/
-   /*height: 84px;*/
-   /*margin: auto;*/
-   text-align: center;
-   /*margin-top: 20px;*/
-   /*margin: 10px 343px 0px 4px;*/
-   text-shadow: #00a4ba 1px 1px, #00a4ba 2px 2px;
-   /*border-radius: 5px;*/
-       padding-right: 300px;
+text-decoration: none;
+    height: 100px;
+    /*text-align: center;*/
+    width: 100px;
+    /*font-size: 50px;*/
+    line-height: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+       /*padding-right: 887px;*/
 }
 
 .skills .mid-skills {
@@ -311,6 +309,7 @@ color: white;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+    /*width: 93%;*/
 
 }
 
@@ -328,17 +327,17 @@ color: white;
     /*margin: auto;*/
     /*text-align: center;*/
         /*margin: 0px 0 70px 0;*/
-        padding: 80px 0;
+        padding: 40px 0;
 
 }
 
 .contact {
-    /*padding: 60px;*/
-    /*text-align: center;*/
-    /*color: black;*/
-    /*background-color: #eee;*/
-    /*display: table;*/
-    /*content: " ";*/
+     background: royalblue;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    position: relative;
+    color: #fff;
     padding-top: 50px;
     padding-bottom: 60px;
     padding-left: 0;
@@ -348,23 +347,23 @@ color: white;
 .contact .inner-contact:before {
     display: table;
     content: " ";
+        box-sizing: border-box;
 }
 .contact .inner-contact{
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    float: left;
-    position: relative;
-    z-index: 99;
-    color: #fff;
+    display: table;
+    content: " ";
+
 }
 
 .contact h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
-    color: royalblue;
+    color: white;
 }
 
 /*footer styles */
@@ -391,55 +390,59 @@ color: white;
     margin: 18px 9px -28px 9px;
 }
 
-@media only screen and (min-width: 1200px){
-.works, .inner-content {
-    width: 1170px;
-}
-.mid-skills, .mid-skills-two{
-    width: 100%;
-    float: left;
-}
-    
-}
-
-@media only screen and (min-width: 992px){
-.works{
-    width: 970px;
-}
-.mid-skills, .mid-skills-two{
-    width: 50%;
-    float: left;
-}
-.inner-content{
-    margin-left: 25%;
-        width: 50%;
-            float: left;
-}
-    
-}
-
-@media only screen and (min-width: 768px){
-.works {
-    width: 750px;
-}
-.inner-content{
-    
-}
-
-}
-
-@media only screen and (max-width: 767px) {
-
-  .about {
-
+@media only screen and (max-width: 1200px){
+.about {
     padding: 70px 0;
-
   }
 
-  .about .about-me {
+.about .about-me {
+    width: 61%;
+}
+}
 
-    padding: 0;
 
+@media only screen and (max-width: 450px){
+
+header h1, 
+header .navigation{
+    width: 100%;
+    padding-left: 0px;
+}
+.skills .mid-skills,
+.skills .mid-skills-two,
+.skills h2 
+{
+    width: 125%;
+}
+
+ .about {
+    padding: 70px 0;
   }
 
+.about .about-me {
+    width: 95%;
+}
+
+}
+
+@media only screen and (max-width: 996px){
+
+.about {
+    padding: 70px 0;
+  }
+
+.about .about-me {
+    width: 50%;
+}
+
+}
+@media only screen and (max-width: 780px){
+.about {
+    padding: 70px 0;
+  }
+
+.about .about-me {
+    width: 100%;
+    padding: 0px 10px;
+}
 }
