--- a/main.css
+++ b/main.css
@@ -107,7 +107,6 @@ header .navigation li {
 
 header .navigation a {
     font-weight: 800;
-    /*color: #b37c57;*/
     color: white;
     text-decoration: none;
 }
@@ -155,8 +154,7 @@ color: white;
     margin-left: auto;
 }
 .about {
-    /*padding: 110px 0;*/
-    padding: 20px 30px 0 30px;
+    padding: 70px 0px 100px 0px;
 
 }
 .about h2{
@@ -169,10 +167,10 @@ color: white;
 }
 
 .about .my-pic img {
-     max-width: 100%;
-    height: 424px;
-    width: 360px;
-    border-radius: 500px;
+    max-width: 100%;
+    height: auto;
+    width: 424px;
+    border-radius: 4px;
 }
 
 .about .my-pic {
@@ -265,18 +263,14 @@ list-style: none;
 .skills img {
 text-decoration: none;
     height: 100px;
-    /*text-align: center;*/
     width: 100px;
-    /*font-size: 50px;*/
     line-height: 100px;
     overflow: hidden;
     border-radius: 50%;
-       /*padding-right: 887px;*/
 }
 
 .skills .mid-skills {
 
-    position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
@@ -284,7 +278,6 @@ text-decoration: none;
 }
 
 .skills .mid-skills-two {
-     position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
@@ -357,12 +350,16 @@ text-decoration: none;
 
 @media only screen and (max-width: 1200px){
 .about {
-    padding: 70px 0;
+    padding: 70px 0px 125px 0px;
+
   }
 
 .about .about-me {
-    width: 61%;
-}
+    width: 50%;
+ }
+ .about .my-pic img{
+     max-width: 80%;
+ }
 }
 
 
@@ -386,12 +383,12 @@ header .navigation{
 .skills .inner-content p{
     width: 108%;
 }
- .about {
-    padding: 70px 0;
+.about {
+    padding: 70px 0px 125px 0px;
   }
 
 .about .about-me {
-    width: 95%;
+    width: 80%;
 }
 
 }
@@ -411,26 +408,43 @@ header .navigation{
 .skills .inner-content p{
     width: 103%;
 }
+.about {
+    padding: 70px 0px 125px 0px;
+  }
+
+.about .about-me {
+    width: 70%;
+}
+ .about .my-pic img{
+     width: 50%;
+ }
+
 }
 
 @media only screen and (max-width: 996px){
 
 .about {
-    padding: 70px 0;
+    padding: 70px 0px 270px 0px;
   }
 
 .about .about-me {
     width: 50%;
 }
+ .about .my-pic img{
+     max-width: 40%;
+ }
+
 
 }
 @media only screen and (max-width: 780px){
 .about {
-    padding: 70px 0;
+    padding: 70px 0px 125px 0px;
   }
 
 .about .about-me {
-    width: 100%;
-    padding: 0px 10px;
-}
+    width: 90%;
+ }
+ .about .my-pic img{
+     max-width: 60%;
+ }
 }
