--- a/main.css
+++ b/main.css
@@ -100,6 +100,10 @@ header .navigation {
 header .navigation ul {
     list-style: none;
 }
+/*header .navigation a:link{*/
+/*    color: white;*/
+/*}*/
+
 header .navigation li {
     display: inline-block;
     padding: 3px 10px;
@@ -107,6 +111,7 @@ header .navigation li {
 
 header .navigation a {
     font-weight: 800;
+    /*color: #b37c57;*/
     color: white;
     text-decoration: none;
 }
@@ -129,60 +134,52 @@ color: white;
    background: url(river.jpg) no-repeat 50%;
    background-size: cover;
    background-attachment: inherit;
-    padding: 215px 0;
+    padding: 275px 0;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     margin-top: 50px;
     text-align: center;
 }
-.container h1{
-    color: white;
-    font-size: 35px;
-    text-shadow: 2px 2px gray;
-    font-weight: bold
-}
 .container h2 {
     color: white;
-    font-size: 30px;
+    font-size: 45px;
     text-shadow: 2px 2px gray;
-    font-weight: bold
 }
 
-.about-me{
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.about {
-    padding: 70px 0px 100px 0px;
-
-}
-.about h2{
+h2 {
     text-transform: uppercase;
     color: royalblue;
 }
 
-.about p {
-    margin-bottom: 35px;
+.about {
+    padding: 90px 0px 488px 26px;
+    width: 86%;
+    margin: 0px auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    box-sizing: border-box;
 }
 
-.about .my-pic img {
-    max-width: 100%;
-    height: auto;
-    width: 424px;
-    border-radius: 4px;
+.about p {
+    margin-bottom: 1rem;
+}
+
+.about img {
+    width: 414px;
+    height: 365px;
+    border-radius: 11%;
+    margin: 0px 70px;
 }
 
 .about .my-pic {
-    padding: 20px 30px 0 12px;
- 
+    width: 50%;
+    float: right;
 }
 
 .about .about-me {
-    width: 62%;
+    width: 45%;
     float: left;
-    /*padding: 20px 30px 0px 30px;*/
-    
 }
 
 .projects {
@@ -191,31 +188,19 @@ color: white;
     text-align: center;
     
 }
-.works{
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.works:before{
-    display: table;
-    content: " ";
-    box-sizing: border-box;
-}
-.works:after {
-    clear: both;
-    box-sizing: border-box;
-}
+
 .projects h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    text-transform: uppercase;
-    color: royalblue;
 }
 
+.projects ul {
+    width: 80%;
+    margin: 0 auto;
+}
 
 .projects li {
-    width: 98%;
+    width: 46%;
     margin-left: 1%;
     margin-right: 1%;
     margin-top: 1rem;
@@ -234,94 +219,80 @@ color: white;
 .skills {
     padding: 60px 120px 10px 147px;
     margin-bottom: 97px;
-      text-align: left;
-    list-style: none;
+    /*display: table;*/
+    /*table-layout: fixed;*/
+    width: 91%;
     text-align: center;
-     margin-right: -15px;
-    margin-left: -15px;
-    display: block;
-}
+    /*padding-right: 15px;*/
+    /*padding-left: 15px;*/
+    /*margin-right: auto;*/
+    /*margin-left: auto;*/
+    /*content: "";*/
+    /*margin-right: 15px;*/
+    /*margin-left: 15px;*/
+    padding-right: 17px;
+    padding-left: 23px;
+    margin-right: auto;
+    margin-left: auto;
     
-
-.skills h2{
-    text-transform: uppercase;
-    color: royalblue;
-    text-transform: uppercase;
-    color: royalblue;
 }
 
-.skills .inner-content 
-{
-list-style: none;
+.skills ul {
+    text-align: left;
+    list-style: none;
+}
+
+.skills .inner-content {
+    /*margin: 0;*/
+    /*padding: 20px 0px 20px 85px;*/
+    /*list-style: none;*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: left center;*/
+    /*background-size: 40px;*/
+    
+    margin: 0;
+    padding: 20px 20px;
+    list-style: none;
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 40px;
-    text-align: center;
-     
+    text-align: left;
+    padding: 0px 4px 9px 239px;
+    margin: -65px 8px 7px 0px;
+    
 }
 
 .skills img {
-text-decoration: none;
-    height: 100px;
-    width: 100px;
-    line-height: 100px;
-    overflow: hidden;
-    border-radius: 50%;
+    /*width: 84px;*/
+    /*height: 50px;*/
+    /*margin-left: 130px;*/
+   width: 84px;
+   height: 84px;
+   /* margin-left: 130px; */
+   margin: auto;
+   text-align: center;
+   /*margin-top: 20px;*/
+   margin: 36px 747px 0px 7px;
+   text-shadow: #00a4ba 1px 1px, #00a4ba 2px 2px;
+   border-radius: 5px;
+       
 }
-
-.skills .mid-skills {
-
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-
-}
-
-.skills .mid-skills-two {
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px;
-
-}
-
 .skills .mid-content {
-        padding: 40px 0;
-
+    /*margin: 17px 36px 58px 0px;*/
+    margin: auto;
+    text-align: center;
 }
 
 .contact {
-     background: royalblue;
-    background-size: cover;
-    background-attachment: fixed;
+    padding: 60px;
     text-align: center;
-    position: relative;
-    color: #fff;
-    padding-top: 50px;
-    padding-bottom: 60px;
-    padding-left: 0;
-    padding-right: 0;
-    
-}
-.contact .inner-contact:before {
-    display: table;
-    content: " ";
-        box-sizing: border-box;
-}
-.contact .inner-contact{
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    display: table;
-    content: " ";
-
+    color: black;
+    background-color: #eee;
 }
 
 .contact h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    text-transform: uppercase;
-    color: white;
 }
 
 /*footer styles */
@@ -348,114 +319,273 @@ text-decoration: none;
     margin: 18px 9px -28px 9px;
 }
 
-@media only screen and (max-width: 1200px){
-.about {
-    padding: 70px 0px 125px 0px;
-
-  }
-
-.about .about-me {
-    width: 50%;
- }
- .about .my-pic img{
-     /*max-width: 80%;*/
-     max-width: 100%;
-
- }
-/* .projects .first-image, .projects .sec-image {*/
-/*    max-width: 100%;*/
-/*     display: block;*/
-/*    height: auto;*/
-/*}*/
+/*reposnsive */
+@media only screen and (max-device-width : 1024px)  {
+    .projects {
+        padding: 26px;
+        margin-top: 50px;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        height: 190px;
+        padding: 0px;
+    }
+    .about {
+        padding: 90px 0px 510px 0px;
+    }
+    .about p {
+        margin-bottom: 0rem;
+    }
+    .about .about-me {
+        margin-bottom: 0rem;
+    }
+    .about img {
+        width: 300px;
+        height: 300px;
+        margin: 0px 90px;
+    }
+    .skills{
+        width: 70%;
+        padding: 51px 40px 0px 0px    
+    }
+    .skills .inner-content{
+        background-position: center;
+        list-style: none;
+        background-repeat: no-repeat;
+        background-position: left center;
+        background-size: 40px;
+        text-align: left;
+        padding: 0px 4px 9px 234px;
+        margin: -49px 8px 8px -59px 
+    }
+    .skills .mid-content {
+        margin: 15px 5px 58px 0px;
+    }
+    .skills .mid-skills-two {
+        float: none;
+    }
+    .skills img {
+        margin: 36px 430px -38px 7px;
+    }
 }
 
 
-@media only screen and (max-width: 450px){
 
-header h1, 
-header .navigation{
-    width: 100%;
-    padding-left: 0px;
+@media only screen and (max-device-width: 768px) {
+    header h1{
+        width: 113%;
+        font-size: 20px;
+        padding-top: 5px;
+    }
+    header .navigation {
+        width: 99%;
+        margin-top: 2px;
+        font-size: 9px;
+        padding-left: 0px;
+    }
+  .container{
+        background-position: inherit;
+    }
+    .container h2{
+        font-size: 37px;
+    }
+    .about .about-me{
+        padding: 7px 114px 44px 2px;
+        font-size: 8px;
+        height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 322px;
+    }
+    .about img {
+    width: 52%;
+    height: 183px;
+    margin: 47px 5px 25px 2px;
+    }
+    .projects {
+        padding: 26px;
+        margin-top: 50px;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        height: 280px;
+        padding: 0px;
+    }
+    .projects h2{
+        font-size: 19px;
+    }
+    .projects img{
+       
+    }
+    .about {
+        padding: 33px 0px 600px 0px;
+    }
+    .about p {
+        margin-bottom: 0rem;
+        font-size: 19px;
+        width: 470px;
+    }
+    .about .about-me {
+        /*margin-bottom: 0rem;*/
+        padding: 5px 165px 26px 3px
+    }
+    .about img{
+        width: 54%;
+        height: 231px;
+        margin: 172px 36px 0px 101px;
+        padding: 1px 5px 13px 11px;
+        border-radius: 18px;
+    }
+    .projects{
+        font-size: 9px;
+    }
+    .projects ul{
+        width: 99%;
+    }
+    .projects p{
+        font-size: 19px;
+    }
+    .projects h3{
+        font-size: 14px;
+    }
+    .skills{
+        width: 62%;
+        padding: 30px 74px 6px 39px;   
+    }
+    .skills h2{
+            font-size: 25px;
+    }
+    .my-skills{
+        padding-top: 40px;
+    }
+    .skills .inner-content {
+        padding: 7px 0px 0px 1px;
+        margin: 0px 560px 2px 0px;
+        width: 710px;
+    }
+    .skills .inner-content p{
+        font-size: 19px;
+    }
+    .skills .mid-content {
+        margin: 1px 5px 8px 0px;
+    }
+    .skills .mid-skills-two {
+        float: none;
+    }
+    .skills img {
+        margin: 83px 481px -87px -131px
+    }
+    .contact{
+        padding: 36px;
+    }
+    .contact p{
+        font-size: 12px;
+    }
 }
-.skills{
-   padding: 67px 71px 10px 79px;
-}
-.skills .mid-skills,
-.skills .mid-skills-two,
-.skills h2 
-{
-    width: 87%;
-}
-.skills .inner-content p,
-.skills .inner-content p{
-    width: 108%;
-}
-.about {
-    padding: 70px 0px 125px 0px;
-  }
-
-.about .about-me {
-    width: 80%;
-}
-
-}
-
-@media only screen and (max-width: 320px){
-
-.skills{
-    padding: 67px 159px 10px 9px;
-}
-.skills .mid-skills,
-.skills .mid-skills-two,
-.skills h2 
-{
-    width: 193%;
-}
-.skills .inner-content p,
-.skills .inner-content p{
-    width: 103%;
-}
-.about {
-    padding: 70px 0px 125px 0px;
-  }
-
-.about .about-me {
-    width: 70%;
-}
- .about .my-pic img{
-     /*width: 50%;*/
-     width: 100%;
- }
 
 
-}
-
-@media only screen and (max-width: 996px){
-
-.about {
-    padding: 70px 0px 270px 0px;
-  }
-
-.about .about-me {
-    width: 50%;
-}
- .about .my-pic img{
-     /*max-width: 40%;*/
-     max-width: 100%;
- }
-
-
-}
-@media only screen and (max-width: 780px){
-.about {
-    padding: 70px 0px 125px 0px;
-  }
-
-.about .about-me {
-    width: 90%;
- }
- .about .my-pic img{
-     /*max-width: 60%;*/
-     max-width: 100%;
- }
+@media only screen and (max-device-width: 420px) {
+    header h1{
+        width: 113%;
+        font-size: 20px;
+        padding-top: 5px;
+    }
+    header .navigation {
+        width: 99%;
+        margin-top: 2px;
+        font-size: 9px;
+        padding-left: 0px;
+    }
+    .container{
+        background-position: inherit;
+    }
+    .container h2{
+        font-size: 21px;
+    }
+    .about .about-me{
+        padding: 7px 114px 44px 2px;
+        font-size: 8px;
+        height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 322px;
+    }
+    .about img {
+    width: 52%;
+    height: 183px;
+    margin: 47px 5px 25px 2px;
+    }
+    .projects {
+        padding: 26px;
+        margin-top: 50px;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        height: 280px;
+        padding: 0px;
+    }
+    .projects img{
+       
+    }
+    .about {
+        padding: 33px 0px 600px 0px;
+    }
+    .about p {
+        margin-bottom: 0rem;
+        font-size: 19px;
+        width: 470px;
+    }
+    .about .about-me {
+        /*margin-bottom: 0rem;*/
+        padding: 5px 165px 26px 3px
+    }
+    .about img{
+        width: 54%;
+        height: 231px;
+        margin: 172px 36px 0px 101px;
+        padding: 1px 5px 13px 11px;
+        border-radius: 18px;
+    }
+    .projects{
+        font-size: 9px;
+    }
+    .projects ul{
+        width: 99%;
+    }
+    .projects p{
+        font-size: 19px;
+    }
+    .skills{
+        width: 62%;
+        padding: 30px 74px 6px 39px;   
+    }
+    .skills h2{
+            font-size: 42px;
+    }
+    .my-skills{
+        padding-top: 40px;
+    }
+    .skills .inner-content {
+        padding: 31px 0px 0px 1px;
+        margin: 0px 560px 2px 0px;
+        width: 710px;
+    }
+    .skills .inner-content p{
+        font-size: 19px;
+    }
+    .skills .mid-content {
+        margin: 1px 5px 8px 0px;
+    }
+    .skills .mid-skills-two {
+        float: none;
+    }
+    .skills img {
+        margin: 83px 481px -112px -131px
+    }
+    .contact{
+        padding: 36px;
+    }
+    .contact p{
+        font-size: 12px;
+    }
 }
