--- a/main.css
+++ b/main.css
@@ -147,11 +147,21 @@ color: white;
     font-weight: bold
 }
 
+.wrapper {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+    clear: both;
+    display: block;
+    height: auto;
+}
+
 .about-me{
     padding-right: 15px;
     padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    width: 50%;
+    display:inline-block;
+    vertical-align: top;
 }
 .about {
     padding: 70px 0px 100px 0px;
@@ -163,27 +173,23 @@ color: white;
 }
 
 .about p {
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
-
+.about .my-pic {
+    padding: 20px 30px 0 12px;
+    width: 49%;
+    display:inline-block;
+    vertical-align: top;
+ 
+}
 .about .my-pic img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
-    width: 424px;
     border-radius: 4px;
 }
 
-.about .my-pic {
-    padding: 20px 30px 0 12px;
- 
-}
 
-.about .about-me {
-    width: 62%;
-    float: left;
-    /*padding: 20px 30px 0px 30px;*/
-    
-}
+
 
 .projects {
     padding: 60px 0;
