--- a/main.css
+++ b/main.css
@@ -46,18 +46,19 @@
 /*general styles*/
 
 html,
-body{
-width:100%;
-overflow-x:hidden;
+body {
+    width: 100%;
+    overflow-x: hidden;
 }
+
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
     background-color: #fff;
-    width:100%;
-    overflow-x:hidden;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -100,6 +101,7 @@ header .navigation {
 header .navigation ul {
     list-style: none;
 }
+
 header .navigation li {
     display: inline-block;
     padding: 3px 10px;
@@ -113,33 +115,38 @@ header .navigation a {
 
 /* links */
 
-header .navigation a:link, header .navigation a:visited {
-color: white;
+header .navigation a:link,
+header .navigation a:visited {
+    color: white;
 }
 
-header .navigation a:hover, header .navigation a:focus {
-color: brown;
+header .navigation a:hover,
+header .navigation a:focus {
+    color: brown;
 }
+
 header .navigation a:active {
-color: white;
+    color: white;
 }
 
 
 .container {
-   background: url(river.jpg) no-repeat 50%;
-   background-size: cover;
-   background-attachment: inherit;
+    background: url(river.jpg) no-repeat 50%;
+    background-size: cover;
+    background-attachment: inherit;
     padding: 215px 0;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     margin-top: 50px;
     text-align: center;
 }
-.container h1{
+
+.container h1 {
     color: white;
     font-size: 35px;
     text-shadow: 2px 2px gray;
     font-weight: bold
 }
+
 .container h2 {
     color: white;
     font-size: 30px;
@@ -156,18 +163,20 @@ color: white;
     height: auto;
 }
 
-.about-me{
+.about-me {
     padding-right: 15px;
     padding-left: 15px;
     width: 50%;
-    display:inline-block;
+    display: inline-block;
     vertical-align: top;
 }
+
 .about {
     padding: 70px 0px 100px 0px;
 
 }
-.about h2{
+
+.about h2 {
     text-transform: uppercase;
     color: royalblue;
 }
@@ -175,13 +184,15 @@ color: white;
 .about p {
     margin-bottom: 15px;
 }
+
 .about .my-pic {
     padding: 20px 30px 0 12px;
     width: 49%;
-    display:inline-block;
+    display: inline-block;
     vertical-align: top;
- 
+
 }
+
 .about .my-pic img {
     width: 100%;
     height: auto;
@@ -195,23 +206,27 @@ color: white;
     padding: 60px 0;
     background-color: #eee;
     text-align: center;
-    
+
 }
-.works{
+
+.works {
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
-.works:before{
+
+.works:before {
     display: table;
     content: " ";
     box-sizing: border-box;
 }
+
 .works:after {
     clear: both;
     box-sizing: border-box;
 }
+
 .projects h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -228,6 +243,32 @@ color: white;
     margin-bottom: 1rem;
     display: inline-block;
     vertical-align: top;
+
+}
+
+.projects li p {
+    text-align: left;
+}
+
+.projects li .button-wrapper {
+    margin-top: 15px;
+    display: block;
+    width: 100%;
+}
+
+.projects li .button-wrapper a {
+    display: inline-block;
+    width: 48%;
+    max-width: 150px;
+    color: royalblue;
+    text-decoration: none;
+    padding: 5px 15px;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+.projects li .button-wrapper a:hover {
+    color: black;
 }
 
 .projects .first-image,
@@ -235,44 +276,66 @@ color: white;
     border-radius: 10px;
     max-width: 100%;
     height: 250px;
+    float: left;
+    padding-left: 1.04166666%;
+    padding-right: 1.04166666%;
+    width: 50%;
+}
+
+.projects h3 {
+    padding-bottom: 3px;
+    margin-top: 19px;
 }
 
 .skills {
-    padding: 60px 120px 10px 147px;
-    margin-bottom: 97px;
-      text-align: left;
+    padding: 60px 20px;
+    /* margin-bottom: 97px; */
+    text-align: left;
     list-style: none;
     text-align: center;
-     margin-right: -15px;
-    margin-left: -15px;
+    /* margin-right: -15px; */
+    /* margin-left: -15px; */
     display: block;
+    width: 100%;
+    /* margin-left: 7%; */
+    /* margin-right: 1%; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: block;
+    vertical-align: top;
+    max-width: 800px;
 }
-    
 
-.skills h2{
+.skills h4,
+.skills p {
+    text-align: left;
+}
+
+.skills h2 {
     text-transform: uppercase;
     color: royalblue;
     text-transform: uppercase;
     color: royalblue;
 }
 
-.skills .inner-content 
-{
-list-style: none;
+.skills .inner-content {
+    list-style: none;
     background-repeat: no-repeat;
     background-position: left center;
     background-size: 40px;
     text-align: center;
-     
+    margin-left: 120px;
+    margin-top: 20px;
 }
 
 .skills img {
-text-decoration: none;
+    text-decoration: none;
     height: 100px;
     width: 100px;
     line-height: 100px;
     overflow: hidden;
     border-radius: 50%;
+    float: left;
 }
 
 .skills .mid-skills {
@@ -291,12 +354,12 @@ text-decoration: none;
 }
 
 .skills .mid-content {
-        padding: 40px 0;
+    padding: 40px 0;
 
 }
 
 .contact {
-     background: royalblue;
+    background: royalblue;
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
@@ -306,14 +369,16 @@ text-decoration: none;
     padding-bottom: 60px;
     padding-left: 0;
     padding-right: 0;
-    
+
 }
+
 .contact .inner-contact:before {
     display: table;
     content: " ";
-        box-sizing: border-box;
+    box-sizing: border-box;
 }
-.contact .inner-contact{
+
+.contact .inner-contact {
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -354,114 +419,95 @@ text-decoration: none;
     margin: 18px 9px -28px 9px;
 }
 
-@media only screen and (max-width: 1200px){
-.about {
-    padding: 70px 0px 125px 0px;
+@media only screen and (max-width: 1200px) {
+    .about .about-me {
+        width: 50%;
+    }
+    .about .my-pic img {
+        /*max-width: 80%;*/
+        max-width: 100%;
 
-  }
-
-.about .about-me {
-    width: 50%;
- }
- .about .my-pic img{
-     /*max-width: 80%;*/
-     max-width: 100%;
-
- }
-/* .projects .first-image, .projects .sec-image {*/
-/*    max-width: 100%;*/
-/*     display: block;*/
-/*    height: auto;*/
-/*}*/
+    }
+    /* .projects .first-image, .projects .sec-image {*/
+    /*    max-width: 100%;*/
+    /*     display: block;*/
+    /*    height: auto;*/
+    /*}*/
 }
 
-
-@media only screen and (max-width: 450px){
-
-header h1, 
-header .navigation{
-    width: 100%;
-    padding-left: 0px;
-}
-.skills{
-   padding: 67px 71px 10px 79px;
-}
-.skills .mid-skills,
-.skills .mid-skills-two,
-.skills h2 
-{
-    width: 87%;
-}
-.skills .inner-content p,
-.skills .inner-content p{
-    width: 108%;
-}
-.about {
-    padding: 70px 0px 125px 0px;
-  }
-
-.about .about-me {
-    width: 80%;
+@media only screen and (max-width: 996px) {
+    .about .about-me {
+        width: 50%;
+    }
+    .about .my-pic img {
+        /*max-width: 40%;*/
+        max-width: 100%;
+    }
+    .projects .first-image,
+    .projects .sec-image {
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-bottom:20px;
+    }
 }
 
+@media only screen and (max-width: 780px) {
+    .about {
+        padding: 70px 0px 125px 0px;
+    }
+    .about .about-me {
+        width: 100%;
+    }
+    .about .my-pic {
+        width: 100%;
+        display: block;
+    }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 450px) {
 
-.skills{
-    padding: 67px 159px 10px 9px;
-}
-.skills .mid-skills,
-.skills .mid-skills-two,
-.skills h2 
-{
-    width: 193%;
-}
-.skills .inner-content p,
-.skills .inner-content p{
-    width: 103%;
-}
-.about {
-    padding: 70px 0px 125px 0px;
-  }
+    header h1,
+    header .navigation {
+        width: 100%;
+        padding-left: 0px;
+    }
 
-.about .about-me {
-    width: 70%;
-}
- .about .my-pic img{
-     /*width: 50%;*/
-     width: 100%;
- }
+    .skills .inner-content {
+        margin-top: 0px;
+    }
+    .about {
+        padding: 70px 0px 125px 0px;
+    }
 
 
 }
 
-@media only screen and (max-width: 996px){
+@media only screen and (max-width: 320px) {
 
-.about {
-    padding: 70px 0px 270px 0px;
-  }
+    .skills {
+        padding: 67px 159px 10px 9px;
+    }
+    .skills .mid-skills,
+    .skills .mid-skills-two,
+    .skills h2 {
+        width: 193%;
+    }
+    .skills .inner-content p,
+    .skills .inner-content p {
+        width: 103%;
+    }
+    .about {
+        padding: 70px 0px 125px 0px;
+    }
 
-.about .about-me {
-    width: 50%;
-}
- .about .my-pic img{
-     /*max-width: 40%;*/
-     max-width: 100%;
- }
+    .about .about-me {
+        width: 70%;
+    }
+    .about .my-pic img {
+        /*width: 50%;*/
+        width: 100%;
+    }
 
 
-}
-@media only screen and (max-width: 780px){
-.about {
-    padding: 70px 0px 125px 0px;
-  }
-
-.about .about-me {
-    width: 90%;
- }
- .about .my-pic img{
-     /*max-width: 60%;*/
-     max-width: 100%;
- }
 }
