changed the header style

--- a/main.css
+++ b/main.css
@@ -95,6 +95,7 @@ header .navigation {
     text-align: right;
     vertical-align: top;
     margin-top: 7px;
+    float: right;
 }
 
 header .navigation ul {
