--- a/main.css
+++ b/main.css
@@ -81,7 +81,7 @@ header {
     left: 0;
 }
 
-header h1 {
+header h1  {
     text-align: left;
     display: inline-block;
     width: 49%;
@@ -89,7 +89,15 @@ header h1 {
     color: white;
     padding-left: 18px;
 }
-
+header h1 a{
+    color: #eee;
+    text-decoration: none;
+    font-family: 'Pacifico', cursive;
+}
+header h1 a:hover{
+    text-decoration: underline;
+    color: white;
+}
 header .navigation {
     display: inline-block;
     text-align: right;
@@ -109,7 +117,7 @@ header .navigation li {
 
 header .navigation a {
     font-weight: 800;
-    color: white;
+    color: #eee;
     text-decoration: none;
 }
 
@@ -117,16 +125,16 @@ header .navigation a {
 
 header .navigation a:link,
 header .navigation a:visited {
-    color: white;
+    color: #eee;
 }
 
 header .navigation a:hover,
 header .navigation a:focus {
-    color: brown;
+    color: white;
 }
 
 header .navigation a:active {
-    color: white;
+    color: #eee;
 }
 
 
@@ -177,7 +185,6 @@ header .navigation a:active {
 }
 
 .about h2 {
-    text-transform: uppercase;
     color: royalblue;
 }
 
@@ -230,7 +237,6 @@ header .navigation a:active {
 .projects h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    text-transform: uppercase;
     color: royalblue;
 }
 
@@ -312,9 +318,6 @@ header .navigation a:active {
 }
 
 .skills h2 {
-    text-transform: uppercase;
-    color: royalblue;
-    text-transform: uppercase;
     color: royalblue;
 }
 
@@ -391,7 +394,6 @@ header .navigation a:active {
 .contact h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    text-transform: uppercase;
     color: white;
 }
 
